--- a/source/sass/blocks/more-products.scss
+++ b/source/sass/blocks/more-products.scss
@@ -23,6 +23,7 @@
   &:active {
     color: rgba(68, 68, 68, 0.3);
   }
+  color: $color-black;
   background-color: $color-bg-light-grey;
   padding: 10px 0;
   min-width: 280px;
