--- a/source/sass/blocks/product-catalog.scss
+++ b/source/sass/blocks/product-catalog.scss
@@ -3,7 +3,7 @@
   font-size: 36px;
   line-height: 60px;
   font-weight: 400;
-  border-bottom: 1px solid $color-grey-border;
+  border-bottom: 1px solid $color-bg-light-grey;
   margin: 0;
   padding: 30px 20px 35px;
 }
@@ -15,7 +15,7 @@
 }
 
 .product-catalog__item {
-  border-bottom: 1px solid $color-grey-border;
+  border-bottom: 1px solid $color-bg-light-grey;
 }
 
 .product-catalog__item-wrapper {
