--- a/source/sass/blocks/site-navigation.scss
+++ b/source/sass/blocks/site-navigation.scss
@@ -11,7 +11,7 @@
 }
 
 .site-navigation__item {
-  border-bottom: 1px solid $color-grey-border;
+  border-top: 1px solid $color-grey-border;
   padding: 21px 0 22px;
 }
 
