--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -46,6 +46,7 @@ $color-black-two: #222222;
 $color-grey-font: #444444;
 $color-brownish-grey: #666666;
 $color-pinkish-grey: #cdcdcd;
+$color-scale-grey: #dcdcdc;
 $color-bg-light-grey: #f2f2f2;
 $color-grey-border: #cdcdcd;
 $color-grey-focus: #ebebeb;
