--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -4,6 +4,12 @@
   list-style: none;
 }
 
+@mixin reset-fieldset {
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
 @mixin hidden {
   border: 0;
   clip: rect(0, 0, 0, 0);
