--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -46,14 +46,16 @@ $color-black-two: #222222;
 $color-grey-font: #444444;
 $color-brownish-grey: #666666;
 $color-pinkish-grey: #cdcdcd;
+$color-pinkish-grey50: rgba(205, 205, 205, 0.5);
 $color-scale-grey: #dcdcdc;
 $color-bg-light-grey: #f2f2f2;
 $color-grey-border: #cdcdcd;
 $color-grey-focus: #ebebeb;
+$color-radio-border: #bababa;
 $color-white: rgb(255, 255, 255);
 $white60: rgba(255, 255, 255, 0.6);
 $white30: rgba(255, 255, 255, 0.3);
-$temporary-hero-color: #ffa530;
+$color-input-error: #ff8282;
 $retina-dppx: 1.5dppx;
 
 @import "fonts";
