--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -23,7 +23,7 @@
     width: 100%;
     height: 3px;
     position: absolute;
-    background-color: #5eaa2f;
+    background-color: $color-bg-green;
     bottom: 8px;
   }
   position: relative;
