--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -19,10 +19,11 @@
     padding: 0 30px;
   }
 
-  .full-container {
+  .container-form {
     max-width: 768px;
     margin: 0 auto;
     width: 100%;
+    padding: 0 70px;
     position: relative;
   }
 }
@@ -31,12 +32,5 @@
   .container {
     max-width: 1440px;
     padding: 0 110px;
-  }
-
-  .full-container {
-    max-width: 1440px;
-    margin: 0 auto;
-    width: 100%;
-    position: relative;
   }
 }
