--- a/source/sass/blocks/programs-selection.scss
+++ b/source/sass/blocks/programs-selection.scss
@@ -2,5 +2,20 @@
   font-size: 36px;
   line-height: 60px;
   font-weight: 400;
-  padding-left: 20px;
+}
+
+@media (min-width: $tablet-width) {
+  .programs-selection__title {
+    font-size: 60px;
+    line-height: 60px;
+    margin: 0;
+    padding-top: 63px;
+    padding-bottom: 50px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .programs-selection {
+    padding-top: 137px;
+  }
 }
