--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -102,6 +102,7 @@
     z-index: 5;
     left: 50%;
     transform: translateX(-50%);
+    padding-top: 53px;
   }
 
   .main-nav__logo-img--tablet {
