--- a/source/sass/blocks/program-form.scss
+++ b/source/sass/blocks/program-form.scss
@@ -250,8 +250,7 @@
   &:hover,
   &:focus {
     outline: none;
-    border: 2px solid $color-black-font;
-    margin: -1px;
+    border: 1px solid $color-black-font;
   }
   width: 100%;
   min-height: 150px;
@@ -501,6 +500,7 @@
     text-align: left;
     margin-top: 40px;
     padding-left: 20px;
+    height: 174px;
   }
 
   .program-form__list-checkbox {
@@ -587,6 +587,7 @@
 @media (min-width: $desktop-width) {
   .program-form__name-wrapper {
     display: flex;
+    justify-content: center;
     align-items: flex-start;
     width: 100%;
     padding-left: 110px;
@@ -605,18 +606,57 @@
   .program-form__task {
     margin-top: 0;
     margin-right: 0;
-    margin-left: 60px;
+    margin-left: 80px;
     margin-bottom: 0;
     width: 50%;
     border: 1px solid $color-pinkish-grey50;
   }
 
   .program-form__list {
-    margin-right: -90px;
+    margin-right: -110px;
     margin-left: -110px;
   }
 
   .program-form__list-radio {
-    margin-left: -80px;
+    padding-left: 25px;
+    margin-right: -110px;
+    margin-left: -105px;
+  }
+
+  .program-form__contacts-list {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .program-form__contacts-item {
+    width: 50%;
+  }
+
+  .program-form__item--phone {
+    margin-right: 80px;
+  }
+
+  .program-form__button-wrapper {
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    padding-bottom: 70px;
+  }
+
+  .program-form__button {
+    width: 50%;
+    margin-right: 80px;
+  }
+
+  .program-form__small {
+    width: 50%;
+    padding-top: 0;
+    font-size: 16px;
+    line-height: 16px;
+  }
+
+  .program-form__legend {
+    margin-left: 70px;
   }
 }
