--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -8,13 +8,13 @@
     content: "";
     position: absolute;
   }
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   position: relative;
 }
 
 .advantages__wrapper-item {
   background-color: $color-bg-light-grey;
-  padding: 30px 21px 14px 30px;
+  padding: 30px 21px 14px 21px;
 }
 
 .advantages__title {
@@ -33,7 +33,10 @@
   font-size: 14px;
   line-height: 18px;
   border-bottom: 1px solid $color-grey-border;
+  padding-top: 26px;
   padding-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .advantages__item--sit-before {
@@ -44,7 +47,7 @@
     background-position: center;
     border-radius: 50%;
     top: 24px;
-    left: 30px;
+    left: 22px;
   }
 }
 
@@ -56,7 +59,7 @@
     background-repeat: no-repeat;
     background-position: center;
     top: 24px;
-    left: 37px;
+    left: 30px;
   }
 }
 
@@ -68,7 +71,7 @@
     background-position: center;
     border-radius: 50%;
     top: 25px;
-    left: 30px;
+    left: 22px;
   }
 }
 
@@ -80,7 +83,7 @@
     background-repeat: no-repeat;
     background-position: center;
     top: 35px;
-    left: 22px;
+    left: 13px;
   }
 }
 
