--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -6,8 +6,10 @@
 .features__title {
   color: $color-black-font;
   font-size: 36px;
-  line-height: 60px;
+  line-height: 36px;
+  letter-spacing: -0.9px;
   font-weight: 500;
+  margin: 3px 0 25px;
 }
 
 .features__list {
@@ -68,7 +70,7 @@
 }
 
 .features__text {
-  margin-bottom: 10px;
+  margin-bottom: 27px;
   max-width: 260px;
   position: relative;
   z-index: 2;
