--- a/source/sass/blocks/collaboration.scss
+++ b/source/sass/blocks/collaboration.scss
@@ -4,12 +4,12 @@
   align-items: center;
   background-color: $color-grey-focus;
   padding: 28px 20px 25px;
+  position: relative;
+  z-index: 2;
 }
 
 .collaboration__wrapper--index {
   background-color: $color-white;
-  position: relative;
-  z-index: 2;
 }
 
 .collaboration__title {
@@ -36,6 +36,27 @@
   position: relative;
   margin-top: -39px;
   z-index: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.collaboration__map-wrapper {
+  &::after {
+    content: "";
+    width: 55px;
+    height: 55px;
+    background: url("../img/map-pin.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 3;
+  }
+  position: relative;
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 .collaboration__map-img {
@@ -43,9 +64,7 @@
   position: relative;
   width: 320px;
   height: auto;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+  z-index: 0;
 }
 
 @media (min-width: $tablet-width) {
@@ -53,6 +72,18 @@
     max-width: 768px;
     margin: 0 auto;
     position: relative;
+  }
+
+  .collaboration__map-wrapper {
+    &::after {
+      width: 113px;
+      height: 106px;
+    }
+    max-width: 768px;
+  }
+
+  .collaboration__map {
+    margin-top: 0;
   }
 
   .collaboration__map-img {
@@ -94,7 +125,6 @@
     max-width: 1440px;
     margin: 0 auto;
     position: relative;
-    //Появляется полоска от тега Picture
     height: 400px;
   }
 
@@ -102,8 +132,16 @@
     width: 1440px;
   }
 
+  .collaboration__map-wrapper {
+    &::after {
+      left: auto;
+      right: 272px;
+    }
+    max-width: 1440px;
+  }
+
   .collaboration__map {
-    z-index: 1;
+    margin-top: 0;
   }
 
   .collaboration__wrapper {
