--- a/source/sass/blocks/site-navigation.scss
+++ b/source/sass/blocks/site-navigation.scss
@@ -36,6 +36,7 @@
     font-size: 18px;
     line-height: 25px;
     color: $color-black-font;
+    padding-bottom: 7px;
   }
 
   .site-navigation__link--active {
