--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -57,7 +57,8 @@
     transform: translateX(-50%);
   }
 
-  @media (min-resolution: $retina-dppx) {
+  @media (min-resolution: $retina-dppx),
+    (min-resolution: 144dpi) {
     background-image: url("../img/gift-photo-mobile@2x.jpg");
     background-size: 280px auto;
   }
@@ -109,7 +110,8 @@
       transform: none;
     }
 
-    @media (min-resolution: $retina-dppx) {
+    @media (min-resolution: $retina-dppx),
+      (min-resolution: 144dpi) {
       background-image: url("../img/gift-photo-tablet@2x.jpg");
       background-size: 708px auto;
     }
@@ -135,7 +137,8 @@
       transform: translateX(-50%);
     }
 
-    @media (min-resolution: $retina-dppx) {
+    @media (min-resolution: $retina-dppx),
+      (min-resolution: 144dpi) {
       background-image: url("../img/gift-photo-desktop@2x.jpg");
       background-size: 245px auto;
     }
