--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -70,7 +70,6 @@
 }
 
 .features__text {
-  //margin-bottom: 27px;
   max-width: 260px;
   min-height: 65px;
   position: relative;
@@ -81,6 +80,9 @@
   .features__title {
     font-size: 60px;
     line-height: 60px;
+    letter-spacing: -1.6px;
+    margin-top: 13px;
+    margin-bottom: 72px;
   }
 
   .features__item::before {
@@ -92,8 +94,13 @@
 
   .features__list {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
     padding-left: 0;
+  }
+
+  .features__text {
+    margin-top: 13px;
   }
 
   .features {
@@ -104,9 +111,9 @@
     &::after {
       position: absolute;
       font-family: "Oswald", "Arial", sans-serif;
-      font-size: 295px;
-      top: 94px;
-      left: 100px;
+      font-size: 285px;
+      top: 88px;
+      left: 112px;
       color: $color-bg-light-grey;
       width: 71px;
       height: 228px;
@@ -115,8 +122,10 @@
     font-size: 16px;
     line-height: 24px;
     padding-top: 100px;
-    padding-right: 85px;
-    padding-bottom: 90px;
+    //padding-right: 85px;
+    padding-bottom: 116px;
+    margin-right: 83px;
+    max-width: 240px;
     z-index: 2;
   }
 
@@ -152,6 +161,7 @@
 
   .features__item {
     padding-right: 0;
+    margin-right: 50px;
     max-width: 245px;
   }
 
