--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -104,8 +104,8 @@
     left: 40px;
   }
 
-  .product-catalog__list {
-    display: flex;
+  .product__wrapper-text {
+    width: 170px;
   }
 
   .product__title {
