--- a/source/sass/blocks/more-products.scss
+++ b/source/sass/blocks/more-products.scss
@@ -49,9 +49,14 @@
 }
 
 @media (min-width: $tablet-width) {
-  .more-products {
-    background-color: white;
-    border: 1px solid #d9d9d9;
+  //.more-products {
+  //  max-width: 324px;
+  //}
+
+  .more-products-wrapper {
+    background-color: $color-white;
+    border: 1px solid $color-more-products-border;
+    padding: 0 37px 0 36px;
     max-width: 324px;
   }
 
@@ -86,17 +91,23 @@
   .more-products__button-link {
     margin-bottom: 40px;
     color: $color-black-font;
+    min-width: inherit;
+    width: 100%;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .more-products {
-    max-width: 245px;
+  .more-products-wrapper {
+    width: 245px;
+    background-color: $color-white;
+    border: 1px solid $color-more-products-border;
+    padding: 0 37px 0 36px;
   }
 
-  .more-products__button-link {
-    width: 165px;
-    min-width: inherit;
+  .more-products__title {
+    padding-right: 0;
+    padding-left: 0;
+    width: 170px;
   }
 
   .more-products__description {
