--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -48,6 +48,7 @@ $color-brownish-grey: #666666;
 $color-pinkish-grey: #cdcdcd;
 $color-pinkish-grey50: rgba(205, 205, 205, 0.5);
 $color-scale-grey: #dcdcdc;
+$color-more-products-border: #d9d9d9;
 $color-bg-light-grey: #f2f2f2;
 $color-grey-border: #cdcdcd;
 $color-grey-focus: #ebebeb;
