--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -56,6 +56,8 @@ $color-radio-border: #bababa;
 $color-white: rgb(255, 255, 255);
 $white60: rgba(255, 255, 255, 0.6);
 $white30: rgba(255, 255, 255, 0.3);
+$color-more-button: rgba(68, 68, 68, 0.3);
+$color-input-radio-active: rgba(34, 34, 34, 0.3);
 $color-input-error: #ff8282;
 $retina-dppx: 1.5dppx;
 
