--- a/source/sass/blocks/additional-card.scss
+++ b/source/sass/blocks/additional-card.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   font-family: $font-ArialMT;
-  color: #444444;
+  color: $color-grey-font;
   font-size: 14px;
   line-height: 14px;
 }
