--- a/source/sass/blocks/more-products.scss
+++ b/source/sass/blocks/more-products.scss
@@ -21,7 +21,7 @@
   }
 
   &:active {
-    color: rgba(68, 68, 68, 0.3);
+    color: $color-more-button;
   }
   color: $color-black;
   background-color: $color-bg-light-grey;
@@ -49,10 +49,6 @@
 }
 
 @media (min-width: $tablet-width) {
-  //.more-products {
-  //  max-width: 324px;
-  //}
-
   .more-products-wrapper {
     background-color: $color-white;
     border: 1px solid $color-more-products-border;
