--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -25,7 +25,7 @@
     background-color: $color-green-two;
     position: absolute;
     left: -80px;
-    top: 0;
+    top: 2px;
     background-repeat: no-repeat;
     background-position: center;
   }
@@ -78,6 +78,8 @@
   min-height: 65px;
   position: relative;
   z-index: 2;
+  padding-top: 5px;
+  margin-bottom: 15px;
 }
 
 @media (min-width: $tablet-width) {
@@ -125,7 +127,7 @@
     }
     font-size: 16px;
     line-height: 24px;
-    padding-top: 100px;
+    padding-top: 95px;
     padding-bottom: 116px;
     margin-right: 83px;
     max-width: 240px;
