--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -14,7 +14,7 @@
   }
   display: flex;
   justify-content: center;
-  padding: 41px 0 30px 0;
+  padding: 44px 0 33px;
 }
 
 .footer__social {
@@ -33,8 +33,8 @@
 .footer__social-item {
   font-size: 0;
   line-height: 0;
-  margin: 0 18px;
-  padding: 23px 0;
+  margin: 0 19px;
+  padding: 21px 0;
 }
 
 .footer__academy {
@@ -63,6 +63,11 @@
   &:active .footer__social-img {
     opacity: 0.3;
   }
+}
+
+.footer__academy-img {
+  fill: $color-brownish-grey;
+  width: 35px;
 }
 
 .footer__academy-link {
